# coursework_1

./: _.env.example  main.py  pyproject.toml  readme.md
data/: answer.json  cashback.json  op.xls  operations_short.csv  operations_short.xlsx  reports.json  user_settings.json
htmlcov/: index.html
src/: app_logger.py  config.py  logging_config.ini  reports.py  services.py  utils.py  views.py
tests/: conftest.py  test_app_logger.py  test_reports.py  test_services.py  test_utils.py  test_views.py
