[tool.poetry]
name = "coursework_1"
version = "0.1.0"
description = ""
authors = ["Рыбина Лидия <lidiar@rambler.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
python-dotenv = "^1.2.1"
requests = "^2.32.5"
pandas = "^2.3.3"
openpyxl = "^3.1.5"
yfinance = "^0.2.66"
pytest-mock = "^3.15.1"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^7.0.0"
pytest = "^8.4.2"
coverage = "^7.11.0"
flake8 = "^7.3.0"

[tool.poetry.group.lint.dependencies]
flake8 = "^7.3.0"
mypy = "^1.18.2"
black = "^25.9.0"
isort = "^7.0.0"


[tool.poetry.group.types.dependencies]
pandas-stubs = "^2.3.2.250926"
types-requests = "^2.32.4.20250913"
types-openpyxl = "^3.1.5.20250919"
types-flake8 = "^7.3.0.20250622"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
# Максимальная длина строки
line-length = 119
# Файлы, которые не нужно форматировать
exclude = '''
(
  /(
      \.eggs         # Исключить несколько общих каталогов
    | \.git          # в корне проекта
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | dist
  )/
  | foo.py           # Также отдельно исключить файл с именем foo.py
                     # в корне проекта
)
'''

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = 'venv'

[tool.isort]
# максимальная длина строки
line_length = 119
